src/styles/admonition.css
.admonition {
    padding: 0rem 1.5rem;
    margin: 1.5rem 0;
    border: 1px solid var(--border);
    /*border: 1px solid var(--sidebar-border);*/
    background-color: var(--primary-foreground) !important;
    /*background-color: var(--sidebar-border) !important;*/
    border-radius: 0.75rem !important;
}

/*.dark .admonition { background-color: var(--background) !important; }*/

.admonition-title {
    font-weight: var(--font-weight-bold);
    margin-bottom: 0.5em;
}

.admonition {
    color: var(--admonition-color, inherit);
}

.admonition-warning {
    --admonition-color: #8a6d3b;
}

.admonition-info {
    --admonition-color: oklch(41.531% 0.07644 234.404);
}

.admonition-result {
    --admonition-color: oklch(41.531% 0.07644 234.404);
}

.admonition-danger {
    --admonition-color: #a94442;
}

.dark .admonition-warning {
    --admonition-color: #f6e27a;
}

.dark .admonition-info {
    --admonition-color: oklch(80.92% 0.10157 247.11);
}

.dark .admonition-result {
    --admonition-color: oklch(80.92% 0.10157 247.11);
}

.dark .admonition-danger {
    --admonition-color: #ff9a9a;
}

